--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
 
 body {
   height: 100%;
   margin:0px;
   overflow-x: hidden;
   font-family: "Roboto Condensed", sans-serif;
+
+
+
 }
 
 .navbar{
@@ -123,6 +126,9 @@ body {
   border-radius: 30px;
 }
 
+.nav-text{
+  
+}
 
   .btn-nav {
     background-color: #c2fbd7;
@@ -169,7 +175,7 @@ body {
 }
 
 .icon-f{
-    margin-right: 10px;
+    margin-right: 8px;
 }
 
 .icon-f1{
@@ -177,7 +183,8 @@ body {
 }
 .addbimage{
   position:absolute;
-  right: 10px;
+  right: 15px;
+  bottom: 5px;
 }
 
 .tfooter{
@@ -328,7 +335,16 @@ body {
   }
   
   .aName{
-    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 1em;
+    border-radius: 12px;
+    padding: 1em;
+    background: #00aced;
+    margin: 2rem auto 0 auto;
+    max-width: 600px;
+    align-items: center;
+    height: 150px;
   }
   
   .aUrl{
@@ -351,13 +367,61 @@ body {
   }
   .btn-search{
     position: absolute;
-    top: 5px;
+    top: 9px;
     right: 8px;
     width: 35px;
+    padding: 0;
+border: none;
+background: none;
+
     /* margin-right: -25px; */
     height: 35px;
     border-radius: 30px;
   } 
+  .koko{
+    padding-bottom: 5px;
+  font-family: 'Ubuntu', sans-serif;
+  color: #2a2a2a;
+  }
+
+
+  @media screen and (max-width: 800px) {
+    .koko {
+      width: 75vw;
+    }
+  }
+  .koko p {
+    margin: 0 0 20px;
+    font-size: 10px;
+
+  }
+  .koko p:last-child {
+    margin: 0;
+  }
+  .koko p a {
+    position: relative;
+    overflow: hidden;
+    text-decoration: none;
+    color: #0d9df7;
+  }
+  .koko p a::after {
+    content: "";
+    background: rgba(62, 174, 243, 0.482);
+    position: absolute;
+    left: 12px;
+    bottom: -6px;
+    width: calc(100% - 8px);
+    height: calc(100% - 8px);
+    z-index: 2;
+    transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
+  }
+  .koko p a:hover:after {
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 100%;
+  }
+  
 
  .input-search{
   max-width: 750px;
@@ -380,9 +444,6 @@ body {
 .tfooter p{
   margin-bottom: 0px;
 }
-
-
-
 
 .navigation {
   position: sticky;
@@ -459,8 +520,6 @@ body {
     padding-top: 60%;
   }
 
-
-
   .navigation-menu ul {
     flex-direction: column;
     position: absolute;
@@ -477,13 +536,6 @@ body {
     text-align: center;
     margin: 0;
   }
-
-  /* .navigation-menu li a {
-    color: black;
-    width: 100%;
-    padding: 1.5rem 0;
-  } */
-
 
   .navigation-menu li:hover {
     background-color: #eee;
@@ -545,4 +597,78 @@ body.active-modal {
   top: 10px;
   right: 10px;
   padding: 5px 7px;
+}
+
+
+
+
+/* CSS */
+.button-17 {
+  margin-top: 10px;
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+}
+
+.button-17:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.button-17:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.button-17:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.button-17:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.button-17:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.button-17:disabled {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
